# neural-search

./: .gitignore  Dockerfile  LICENSE  Makefile  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  docker.yml
benchmarks/: embedding_speed.py  search_accuracy.py
examples/: batch_ingestion.py  quickstart.py  rag_example.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: download_models.py  seed_data.py
src/neural_search/: __init__.py  config.py  main.py
src/neural_search/api/: __init__.py  collections.py  documents.py  router.py  schemas.py  search.py
src/neural_search/core/: __init__.py  embeddings.py  hybrid.py  reranker.py  search_engine.py
src/neural_search/storage/: __init__.py  faiss_store.py  qdrant.py  vector_store.py
src/neural_search/utils/: __init__.py  cache.py  metrics.py
src/neural_search/workers/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py
tests/test_api/: test_collections.py  test_documents.py  test_search.py
tests/test_embeddings/: test_embedding_model.py
tests/test_search/: __init__.py  test_faiss_store.py  test_hybrid.py  test_search_engine.py
